--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -29,12 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Publish package
-        uses: JS-DevTools/npm-publish@v1
-        id: package-publish
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-
-      - name: Print version
-        if: steps.package-publish.outputs.type != 'none'
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          echo "Version changed: ${{ steps.package-publish.outputs.old-version }} => ${{ steps.package-publish.outputs.version }}"
+          yarn run publish
