--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,8 @@
 {
   "packages": ["packages/*"],
   "version": "0.0.0",
-  "npmClient": "yarn"
+  "npmClient": "yarn",
+  "publishConfig": {
+    "access": "public"
+  }
 }
