--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    depends: [install-and-build]
     steps:
       - name: Publish package
         env:
