--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,8 +27,11 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    depends: [install-and-build]
+    needs: [install-and-build]
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Publish package
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
