--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  install-and-build:
+  install-and-build-and-publish:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -24,13 +24,6 @@ jobs:
       - name: Lerna bootstrap
         run: |
           yarn run bootstrap
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: [install-and-build]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
 
       - name: Publish package
         env:
