--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna build",
-    "publish": "lerna publish --canary minor --yes"
+    "publish": "lerna publish from-package --yes"
   }
 }
