--- a/packages/monorepo1/package.json
+++ b/packages/monorepo1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo1",
+  "name": "@gmantiqueira/monorepo1",
   "version": "0.0.0",
   "description": "> TODO: description",
   "main": "index.js",
