--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna build",
-    "publish": "lerna publish --canary minor --yes"
+    "publish": "lerna publish from-git minor --yes"
   }
 }
