--- a/packages/monorepo1/package.json
+++ b/packages/monorepo1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@gmantiqueira/monorepo1",
-  "version": "1.3.0",
+  "version": "2.0.0",
   "description": "> TODO: description",
   "main": "index.js",
   "author": "Gabriel Antiqueira <gabriel.antiqueira@vtex.com.br>",
@@ -19,5 +19,6 @@
   },
   "publicConfig": {
     "access": "public"
-  }
+  },
+  "gitHead": "4c2b763d23c634fcccc59fe5cc66d9ec945584f6"
 }
