--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "lerna build",
-    "publish": "lerna publish --yes"
+    "publish": "lerna version minor --yes && lerna publish from-git --yes --force-publish"
   }
 }
