--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,6 +25,11 @@ jobs:
         run: |
           yarn run bootstrap
 
+      - name: Configure CI Git User
+        run: |
+          git config --global user.email octobot@github.com
+          git config --global user.name GitHub Actions
+
       - name: Authenticate with Registry
         run: |
           yarn logout
