--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Configure CI Git User
         run: |
-          git config --global user.email octobot@github.com
-          git config --global user.name GitHub Actions
+          git config --global user.email gabriel.antiqueira@vtex.com.br
+          git config --global user.name VTEX Lerna Bot
 
       - name: Authenticate with Registry
         run: |
