--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Configure CI Git User
         run: |
           git config --global user.email gabriel.antiqueira@vtex.com.br
-          git config --global user.name VTEX Publish Bot
+          git config --global user.name VTEX Publish
 
       - name: Authenticate with Registry
         run: |
