--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,8 +27,8 @@ jobs:
 
       - name: Configure CI Git User
         run: |
-          git config --global user.email gabriel.antiqueira@vtex.com.br
-          git config --global user.name VTEX Publish
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
       - name: Authenticate with Registry
         run: |
